got jbook to compile

--- a/content/notebooks/2_EM/Statics/notes-static_fields.ipynb
+++ b/content/notebooks/2_EM/Statics/notes-static_fields.ipynb
@@ -153,13 +153,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "teaching",
-   "language": "python",
-   "name": "teaching"
+   "name": "open-physics-ed",
+   "display_name": "Python (.venv)",
+   "language": "python"
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.18"
+   "version": "3.13.5"
   },
   "orig_nbformat": 4
  },
