--- a/content/notebooks/3_waves/activity-CoupledOsc-NumericalNormalModes.ipynb
+++ b/content/notebooks/3_waves/activity-CoupledOsc-NumericalNormalModes.ipynb
@@ -244,21 +244,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "teaching",
-   "language": "python",
-   "name": "teaching"
+   "name": "open-physics-ed",
+   "display_name": "Python (.venv)",
+   "language": "python"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.13.5"
   },
   "orig_nbformat": 4,
   "vscode": {
