--- a/content/notebooks/3_waves/notes-fft.ipynb
+++ b/content/notebooks/3_waves/notes-fft.ipynb
@@ -87,13 +87,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Teaching (Python 3.10.5)",
-   "language": "python",
-   "name": "teaching"
+   "name": "open-physics-ed",
+   "display_name": "Python (.venv)",
+   "language": "python"
   },
   "language_info": {
    "name": "python",
-   "version": "3.10.12"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
