--- a/content/notebooks/4_distributions/activity-monte_carlo.ipynb
+++ b/content/notebooks/4_distributions/activity-monte_carlo.ipynb
@@ -19,7 +19,13 @@
  ],
  "metadata": {
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.13.5"
+  },
+  "kernelspec": {
+   "name": "open-physics-ed",
+   "display_name": "Python (.venv)",
+   "language": "python"
   }
  },
  "nbformat": 4,
