--- a/content/notebooks/1_mechanics/dynamical_systems/activity-duffing.ipynb
+++ b/content/notebooks/1_mechanics/dynamical_systems/activity-duffing.ipynb
@@ -106,21 +106,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Teaching (Python 3.10.5)",
-   "language": "python",
-   "name": "teaching"
+   "name": "open-physics-ed",
+   "display_name": "Python (.venv)",
+   "language": "python"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.13.5"
   },
   "orig_nbformat": 4
  },
