--- a/content/notebooks/1_mechanics/lagrangian/activity-frames.ipynb
+++ b/content/notebooks/1_mechanics/lagrangian/activity-frames.ipynb
@@ -129,13 +129,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "teaching",
-   "language": "python",
-   "name": "teaching"
+   "name": "open-physics-ed",
+   "display_name": "Python (.venv)",
+   "language": "python"
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.16"
+   "version": "3.13.5"
   },
   "orig_nbformat": 4
  },
