--- a/content/notebooks/3_waves/notes-waves_intro.ipynb
+++ b/content/notebooks/3_waves/notes-waves_intro.ipynb
@@ -79,9 +79,15 @@
  ],
  "metadata": {
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.13.5"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "kernelspec": {
+   "name": "open-physics-ed",
+   "display_name": "Python (.venv)",
+   "language": "python"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
