--- a/content/notebooks/4_distributions/activity-metropolis.ipynb
+++ b/content/notebooks/4_distributions/activity-metropolis.ipynb
@@ -185,21 +185,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 ('teaching')",
-   "language": "python",
-   "name": "python3"
+   "name": "open-physics-ed",
+   "display_name": "Python (.venv)",
+   "language": "python"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.13.5"
   },
   "orig_nbformat": 4,
   "vscode": {
