--- a/content/notebooks/4_distributions/activity-zombies.ipynb
+++ b/content/notebooks/4_distributions/activity-zombies.ipynb
@@ -136,21 +136,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "teaching",
-   "language": "python",
-   "name": "python3"
+   "name": "open-physics-ed",
+   "display_name": "Python (.venv)",
+   "language": "python"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
